# pastebot

./: .env  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml  compose.yml
.github/: dependabot.yml
.github/workflows/: api.yml  bot.yml  check.yml  deploy.yml  site.yml  web.yml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
bot/: Cargo.toml  Dockerfile
bot/src/: event.rs  main.rs
docs/: 404.html  CNAME
site/: Cargo.toml  Dockerfile  index.html  paste.html
site/resources/: about.html  index.html  main.css  paste.html  privacy.html  terms.html
site/resources/css/: main.css  paste.css
site/resources/html/: about.html  index.html  paste.html  privacy.html  terms.html
site/resources/js/: color.js  highlight.js
site/src/: main.rs  types.rs
src/: main.rs
web/: Cargo.toml  Dockerfile  index.css  index.html  package-lock.json  package.json  tsconfig.json
web/attachment/: index.css  index.html  index.js
web/functions/api/[channel_id]/[attachment_id]/: [filename].ts
web/src/: main.rs
web/src/resources/: paste.html
