[package]
name = "pastebot-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["stream", "rustls-tls"], default-features = false }
axum = { version = "0.6", features = ["macros", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-core = "0.3"
thiserror = "1"
