[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tracing = { version = "0.1", features = ["std", "release_max_level_info", "max_level_trace"], default-features = false }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
