[package]
name = "site"
version = "0.1.0"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]

[dependencies]
axum = { version = "0.5", features = ["http1"], default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"]}

[profile.release]
codegen-units = 1
lto = "fat"
