[package]
name = "web"
version = "0.1.0"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]

[dependencies]
axum = { version = "0.6", features = ["http1", "http2"], default-features = false }
reqwest = { version = "0.11", features = ["rustls-tls", "stream"], default-features = false }
tokio = { version = "1.24", features = ["rt-multi-thread", "macros"]}

